# NFA-Solver

./: .gitignore  CHANGELOG.md  LICENSE  NFA-Solver.cabal  README.md
app/: Main.hs
src/: NFA.hs
