cabal-version:   3.4
name:            NFA-Solver
version:         0.1.0.0
author:          Said Kadrioski
maintainer:      said@kadrioski.de
category:        System
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:  NFA
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.19.1.0,
        containers ^>=0.6.5.1,
        unordered-containers ^>=0.2.20,
        hashable ^>= 1.4.3.0

executable NFA-Solver
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.19.1.0,
        containers ^>=0.6.5.1,
        unordered-containers ^>=0.2.20,
        hashable ^>= 1.4.3.0,
        charset ^>= 0.3.10,
        NFA-Solver

test-suite NFA-Solver-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.19.1.0,
        NFA-Solver
